fix(code-conversion): preserve process instance query semantics
Map ACTIVE only when active() is present and keep variable-filtered query aliases manual. Add regression coverage and update the migration guidance.

Refs: #2933

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>
Signed-off-by: Peter Bojtos <peter.bojtos@camunda.com>